Made the last test for reporting + Changed a .getFirst to get(0) to allow to build the project, changed back in this commit